# R216K-emulator

./: README.md  compile.script  glade.glade  main  main.c  meson.build
r2_prg/: r2_dayweek.asm  r2_hexdump.asm  r2_mult.asm  r2asm.lua  r2com
